Recycle to reprocess (#4)
* add new fields

* cut over to reprocessed fields

* remove old fields

* cut over other usages

* format changes

* finish cut over

* rename metadata type

* update package version

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -19,6 +19,7 @@
   "sourceApiVersion": "61.0",
   "packageAliases": {
     "Apex Backwoods Adventures": "0Hoak0000000IHtCAM",
-    "Apex Backwoods Adventures@0.1.0-1": "04tak0000003jobAAA"
+    "Apex Backwoods Adventures@0.1.0-1": "04tak0000003jobAAA",
+    "Apex Backwoods Adventures@0.1.0-3": "04tak0000004ydVAAQ"
   }
 }
