update package version

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -20,6 +20,7 @@
   "packageAliases": {
     "Apex Backwoods Adventures": "0Hoak0000000IHtCAM",
     "Apex Backwoods Adventures@0.1.0-1": "04tak0000003jobAAA",
-    "Apex Backwoods Adventures@0.1.0-3": "04tak0000004ydVAAQ"
+    "Apex Backwoods Adventures@0.1.0-3": "04tak0000004ydVAAQ",
+    "Apex Backwoods Adventures@0.1.0-4": "04tak0000004yf7AAA"
   }
 }
