create new package version

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -18,6 +18,7 @@
   "sourceApiVersion": "63.0",
   "packageAliases": {
     "Apex Wilderness Adventures": "0Hoak0000000VYTCA2",
-    "Apex Wilderness Adventures@0.1.0-1": "04tak0000008Hq5AAE"
+    "Apex Wilderness Adventures@0.1.0-1": "04tak0000008Hq5AAE",
+    "Apex Wilderness Adventures@0.1.0-2": "04tak0000009X4nAAE"
   }
 }
